# android_rust_service

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  gradle.properties  settings.gradle
.ci/: bootstrap_opensuse.sh  build_inside_docker.sh  build_opensuse.sh
.github/workflows/: android.yml
.vhs/: .zshrc  config.kdl  starship.toml  vhs.kdl
app/: build.gradle
app/src/androidTest/java/com/example/rustapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/rustapp/: MainActivity.java  RustService.java
app/src/main/res/layout/: activity_main.xml  activity_perms.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rustapp/: ExampleUnitTest.java
demo/: fs.tape
src/: lib.rs  service.rs
