[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
android_logger = "0.13.1"
axum = "0.6.18"
chrono = "0.4.26"
jni = { version = "0.21.1", default-features = false }
log = "0.4.19"
notify = { version = "6.0.1", features = ["serde"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
